# wlc-backend

./: CMakeLists.txt  main.cpp
resources/: config.json
sql/public/: wlc_submits.sql  wlc_tasks.sql  wlc_users.sql
src/: App.cpp  AppComponent.hpp  DatabaseComponent.hpp  ErrorHandler.hpp  ServiceComponent.hpp
src/controller/: AdminController.hpp
src/db/: WlcDb.hpp
src/dto/data/: ConfigDto.hpp  Id32Dto.hpp  Id64Dto.hpp  SubmitDto.hpp  UserDto.hpp
src/dto/response/: CommonCountedResponseDto.hpp  CommonNoDataResponseDto.hpp  CommonPagedResponseDto.hpp  CommonSimpleDataResponseDto.hpp
src/service/: AdminService.hpp  BaseClass.hpp  Submit.hpp  User.hpp  UserService.hpp
src/service/util/: Util.hpp
src/service/util/time/: Time.hpp
